[project]
name = "googlemap-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "hidariutiwa", email = "hidariutiwa22@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "rich>=14.3.3",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
googlemaps-mcp = "googlemap_mcp.main:run"
